[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=1.9.0"
]

[tool.black]
extend = "ci/pyproject.toml"

[tool.poetry]

version = "0.5.0"
description = "This is a module to run Gym environments remotely, to enable splitting environment hosting and agent training into separate processes (or even separate machines)."
authors = [
  "Alex Kalaverin <alex@kalaver.in>",
  "Alexander Zap <a_zap@wargaming.net>"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
homepage = "https://kalaver.in"
keywords = [
  "dataclass",
  "decorators",
  "descriptors",
  "http",
  "import",
  "introspection",
  "logging",
  "python",
  "serialization",
  "string",
  "utilities"
]
license = "Proprietary"
name = "remote-gym"
packages = [
    { include = "remote_gym", from = "src" },
]
include = ["src/remote_gym/res/*"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
setuptools = "^75.6.0"
gymnasium = "^0.29.0"
gym = "^0.26.2"
protobuf = ">=3.20, <5"
dm-env-rpc = "^1.1.6"
opencv-python = "^4.9.0.80"
gitpython = "^3.1.43"
fasteners = "^0.19"
psutil = "^6.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.2"
pytest-cov = "^4.0"
tqdm = "^4.66.1"
gym = { version = "^0.26.2", extras = ["classic-control"] }

[tool.poetry.group.dev.dependencies]
black = "^23.3"
pre-commit = "^4.0.1"
ruff = "^0.8.3"

[tool.ruff]
extend = "ci/pyproject.toml"

[tool.ruff.lint.isort]
known-first-party = [
  "kalib"
]

[tool.versioneer]
VCS = "git"
parentdir_prefix = ""
style = "pep440"
tag_prefix = ""
versionfile_source = "pyproject.toml"

[tool.yamlfix]
line_length = 89
preserve_quotes = false
quote_basic_values = false
quote_representation = "'"
section_whitelines = 1
sequence_style = "block_style"
whitelines = 1
